Fix bad overflow on quill box.

--- a/src/style/meeting.scss
+++ b/src/style/meeting.scss
@@ -14,6 +14,7 @@
 
 .notes-card {
   width: 443px;
+  overflow: hidden;
 }
 
 .tasks-card {
